--- a/introduce.css
+++ b/introduce.css
@@ -77,7 +77,7 @@ header {
   padding-bottom: 80px;
   padding-left: 5%;
   padding-right: 5%;
-  background-color: #;
+  background-color: #23479b;
   text-align: left;
 }
 
